Fix broken styles by Cron component (#546)

--- a/src/resources/styles/_general.scss
+++ b/src/resources/styles/_general.scss
@@ -5,6 +5,7 @@ html {
 
 body {
     overflow-x: hidden;
+    font-family: $font-family-base !important;
 }
 
 html,
